--- a/public/css/marx.css
+++ b/public/css/marx.css
@@ -1,11 +1,10 @@
 :root
 {
-	--default-font-list:'Open Sans', 'Nimbus Sans L', 'Helvetica Neue', Helvetica, 'Lucida Grande', sans-serif;
 	-ms-text-size-adjust:100%;
 	-webkit-text-size-adjust:100%;
 	box-sizing:border-box;
 	cursor:default;
-	font-family:var(--default-font-list);
+	font-family:'Open Sans', 'Nimbus Sans L', 'Helvetica Neue', Helvetica, 'Lucida Grande', sans-serif;
 	line-height:1.4;
 	overflow-y:scroll;
 	text-size-adjust:100%;
@@ -37,6 +36,7 @@ main
 	display:block;
 	margin:0 auto;
 	padding:0 1.6em 1.6em;
+	padding:0 16px 16px;
 	padding:0 1.6rem 1.6rem;
 }
 
@@ -52,11 +52,14 @@ pre
 	display:block;
 	font-family:Menlo, Monaco, Consolas, 'Courier New', monospace;
 	font-size:1.4em;
+	font-size:14px;
 	font-size:1.4rem;
 	margin:1.6em 0;
+	margin:16px 0;
 	margin:1.6rem 0;
 	overflow:auto;
 	padding:1.6em;
+	padding:16px;
 	padding:1.6rem;
 	word-break:break-all;
 	word-wrap:break-word;
@@ -85,11 +88,14 @@ template
 
 textarea
 {
+	border:1px solid #ccc;
 	border:.1rem solid #ccc;
 	border-radius:0;
 	display:block;
+	margin-bottom:8px;
 	margin-bottom:.8rem;
 	overflow:auto;
+	padding:8px;
 	padding:.8rem;
 	resize:vertical;
 	vertical-align:middle;
@@ -102,6 +108,8 @@ textarea
 
 [unselectable]
 {
+	-moz-user-select:none;
+	-ms-user-select:none;
 	-webkit-user-select:none;
 	user-select:none;
 }
@@ -142,6 +150,7 @@ audio,canvas,iframe,img,svg,video
 
 button,input,select,textarea
 {
+	border:1px solid #ccc;
 	border:.1rem solid #ccc;
 	color:inherit;
 	font-family:inherit;
@@ -159,7 +168,14 @@ table
 {
 	border-collapse:collapse;
 	border-spacing:0;
+	margin-bottom:16px;
 	margin-bottom:1.6rem;
+}
+
+::-moz-selection
+{
+	background-color:#b3d4fc;
+	text-shadow:none;
 }
 
 ::selection
@@ -176,7 +192,8 @@ button::-moz-focus-inner
 body
 {
 	color:#444;
-	font-family:var(--default-font-list);
+	font-family:'Open Sans', 'Nimbus Sans L', 'Helvetica Neue', Helvetica, 'Lucida Grande', sans-serif;
+	font-size:16px;
 	font-size:1.6rem;
 	font-style:normal;
 	font-weight:400;
@@ -185,20 +202,24 @@ body
 
 p
 {
+	margin:0 0 16px;
 	margin:0 0 1.6rem;
 }
 
 h1,h2,h3,h4,h5,h6
 {
-	font-family:Lato, var(--default-font-list);
+	font-family:Lato, 'Open Sans', 'Nimbus Sans L', 'Helvetica Neue', Helvetica, 'Lucida Grande', sans-serif;
 	margin:2em 0 1.6em;
+	margin:20px 0 16px;
 	margin:2rem 0 1.6rem;
 }
 
 h1
 {
-	border-bottom:.1rem solid rgba(0,0,0,0.2);
+	border-bottom:1px solid rgba(0, 0, 0, .2);
+	border-bottom:.1rem solid rgba(0, 0, 0, .2);
 	font-size:3.6em;
+	font-size:36px;
 	font-size:3.6rem;
 	font-style:normal;
 	font-weight:500;
@@ -207,6 +228,7 @@ h1
 h2
 {
 	font-size:3em;
+	font-size:30px;
 	font-size:3rem;
 	font-style:normal;
 	font-weight:500;
@@ -215,27 +237,33 @@ h2
 h3
 {
 	font-size:2.4em;
+	font-size:24px;
 	font-size:2.4rem;
 	font-style:normal;
 	font-weight:500;
+	margin:16px 0 4px;
 	margin:1.6rem 0 .4rem;
 }
 
 h4
 {
 	font-size:1.8em;
+	font-size:18px;
 	font-size:1.8rem;
 	font-style:normal;
 	font-weight:600;
+	margin:16px 0 4px;
 	margin:1.6rem 0 .4rem;
 }
 
 h5
 {
 	font-size:1.6em;
+	font-size:16px;
 	font-size:1.6rem;
 	font-style:normal;
 	font-weight:600;
+	margin:16px 0 4px;
 	margin:1.6rem 0 .4rem;
 }
 
@@ -243,9 +271,11 @@ h6
 {
 	color:#777;
 	font-size:1.4em;
+	font-size:14px;
 	font-size:1.4rem;
 	font-style:normal;
 	font-weight:600;
+	margin:16px 0 4px;
 	margin:1.6rem 0 .4rem;
 }
 
@@ -254,6 +284,7 @@ code
 	background:#efefef;
 	color:#444;
 	font-family:Menlo, Monaco, Consolas, 'Courier New', monospace;
+	font-size:14px;
 	font-size:1.4rem;
 	word-break:break-all;
 	word-wrap:break-word;
@@ -266,26 +297,33 @@ a:hover,a:focus
 
 dl
 {
+	margin-bottom:16px;
 	margin-bottom:1.6rem;
 }
 
 dd
 {
+	margin-left:40px;
 	margin-left:4rem;
 }
 
 ul,ol
 {
+	margin-bottom:8px;
 	margin-bottom:.8rem;
+	padding-left:20px;
 	padding-left:2rem;
 }
 
 blockquote
 {
+	border-left:2px solid #1271db;
 	border-left:.2rem solid #1271db;
 	font-family:Georgia, Times, 'Times New Roman', serif;
 	font-style:italic;
+	margin:16px 0;
 	margin:1.6rem 0;
+	padding-left:16px;
 	padding-left:1.6rem;
 }
 
@@ -309,19 +347,23 @@ main,header,footer,article,section,aside,details,summary
 
 footer
 {
-	border-top:.1rem solid rgba(0,0,0,0.2);
+	border-top:1px solid rgba(0, 0, 0, .2);
+	border-top:.1rem solid rgba(0, 0, 0, .2);
 	clear:both;
 	display:inline-block;
 	float:left;
 	max-width:100%;
+	padding:10px 0;
 	padding:1rem 0;
 	text-align:center;
 }
 
 hr
 {
-	border-top:.1rem solid rgba(0,0,0,0.2);
+	border-top:1px solid rgba(0, 0, 0, .2);
+	border-top:.1rem solid rgba(0, 0, 0, .2);
 	display:block;
+	margin-bottom:16px;
 	margin-bottom:1.6rem;
 	width:100%;
 }
@@ -335,9 +377,11 @@ img
 
 input[type=text],input[type=password],input[type=email],input[type=url],input[type=date],input[type=month],input[type=time],input[type=datetime],input[type=datetime-local],input[type=week],input[type=number],input[type=search],input[type=tel],input[type=color],select
 {
+	border:1px solid #ccc;
 	border:.1rem solid #ccc;
 	border-radius:0;
 	display:inline-block;
+	padding:8px;
 	padding:.8rem;
 	vertical-align:middle;
 }
@@ -347,16 +391,19 @@ input:not([type])
 	-webkit-appearance:none;
 	background-clip:padding-box;
 	background-color:#fff;
+	border:1px solid #ccc;
 	border:.1rem solid #ccc;
 	border-radius:0;
 	color:#444;
 	display:inline-block;
+	padding:8px;
 	padding:.8rem;
 	text-align:left;
 }
 
 input[type=color]
 {
+	padding:8px 16px;
 	padding:.8rem 1.6rem;
 }
 
@@ -377,6 +424,7 @@ input[type=radio],input[type=checkbox]
 
 input[type=file]:focus,input[type=radio]:focus,input[type=checkbox]:focus
 {
+	outline:1px solid thin #444;
 	outline:.1rem solid thin #444;
 }
 
@@ -415,6 +463,7 @@ input[type=file]:focus:invalid:focus,input[type=radio]:focus:invalid:focus,input
 select
 {
 	background-color:#fff;
+	border:1px solid #ccc;
 	border:.1rem solid #ccc;
 }
 
@@ -432,15 +481,19 @@ fieldset
 {
 	border:0;
 	margin:0;
+	padding:8px 0;
 	padding:.8rem 0;
 }
 
 legend
 {
+	border-bottom:1px solid #ccc;
 	border-bottom:.1rem solid #ccc;
 	color:#444;
 	display:block;
+	margin-bottom:8px;
 	margin-bottom:.8rem;
+	padding:8px 0;
 	padding:.8rem 0;
 	width:100%;
 }
@@ -452,13 +505,17 @@ input[type=submit],button
 	-webkit-transition:.25s ease;
 	-webkit-user-drag:none;
 	-webkit-user-select:none;
+	border:2px solid #444;
 	border:.2rem solid #444;
 	border-radius:0;
 	color:#444;
 	cursor:pointer;
 	display:inline-block;
+	margin-bottom:8px;
 	margin-bottom:.8rem;
+	margin-right:4px;
 	margin-right:.4rem;
+	padding:8px 16px;
 	padding:.8rem 1.6rem;
 	text-align:center;
 	text-decoration:none;
@@ -525,8 +582,10 @@ nav ul li
 nav a
 {
 	-webkit-transition:.25s ease;
+	border-bottom:2px solid transparent;
 	border-bottom:.2rem solid transparent;
 	color:#444;
+	padding:8px 16px;
 	padding:.8rem 1.6rem;
 	text-decoration:none;
 	transition:.25s ease;
@@ -534,16 +593,17 @@ nav a
 
 nav a:hover,nav li.selected a
 {
-	border-color:rgba(0,0,0,0.2);
+	border-color:rgba(0, 0, 0, .2);
 }
 
 nav a:active
 {
-	border-color:rgba(0,0,0,0.56);
+	border-color:rgba(0, 0, 0, .56);
 }
 
 caption
 {
+	padding:8px 0;
 	padding:.8rem 0;
 }
 
@@ -556,12 +616,15 @@ thead th
 tr
 {
 	background:#fff;
+	margin-bottom:8px;
 	margin-bottom:.8rem;
 }
 
 th,td
 {
+	border:1px solid #ccc;
 	border:.1rem solid #ccc;
+	padding:8px 16px;
 	padding:.8rem 1.6rem;
 	text-align:center;
 	vertical-align:inherit;
@@ -575,8 +638,10 @@ tfoot tr
 tfoot td
 {
 	color:#efefef;
+	font-size:8px;
 	font-size:.8rem;
 	font-style:italic;
+	padding:16px 4px;
 	padding:1.6rem .4rem;
 }
 
