Better handling of alternate titles, Airing Status and genres for anime list views

--- a/public/css/base.myth.css
+++ b/public/css/base.myth.css
@@ -354,7 +354,9 @@ a:hover, a:active {
 			display:block;
 		}
 
-		.media > .name > a {
+		.media > .name a,
+		.media > .name a small
+		{
 			background:none;
 			color:#fff;
 			text-shadow: var(--shadow);
