--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1085,7 +1085,9 @@ a:hover, a:active {
 			display:block;
 		}
 
-.media > .name > a {
+.media > .name a,
+		.media > .name a small
+		{
 			background:none;
 			color:#fff;
 			text-shadow:1px 2px 1px rgba(0, 0, 0, .85);
