--- a/public/templates/manga-ajax-search-results.html
+++ b/public/templates/manga-ajax-search-results.html
@@ -1,10 +1,18 @@
-{{#search}}
+{{#data}}
 <article class="media search">
-	<div class="name" style="background-image:url({{image}})">
-		<input type="radio" class="big-check" id="{{link}}" name="id" value="{{link}}" />
-		<label for="{{link}}">
-			<span>{{title}}</span>
+	<div class="name" style="background-image:url({{attributes.posterImage.small}})">
+		<input type="radio" class="big-check" id="{{attributes.slug}}" name="id" value="{{id}}" />
+		<label for="{{attributes.slug}}">
+			<span class="name">
+				{{attributes.canonicalTitle}}
+				<br />
+				<small>
+				{{#attributes.titles}}
+					{{.}}<br />
+				{{/attributes.titles}}
+				</small>
+			</span>
 		</label>
 	</div>
 </article>
-{{/search}}
+{{/data}}
