Update views to show streaming links

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -794,6 +794,10 @@ a:hover, a:active {
 	background-color:#db7d12;
 }
 
+.full_width {
+	width: 100%;
+}
+
 /* -----------------------------------------------------------------------------
 	CSS loading icon
 ------------------------------------------------------------------------------*/
@@ -1208,7 +1212,7 @@ a:hover, a:active {
 	text-align:center;
 	color: greenyellow;
 	position:absolute;
-	top:5px;
+	top:147px;
 	left:0;
 	height:100%;
 	width:100%;
@@ -1248,8 +1252,9 @@ a:hover, a:active {
 }
 
 .details .cover {
-	max-width: 300px;
-	max-height: 435px;
+	display: block;
+	width: 284px;
+	height: 402px;
 }
 
 .details h2 {
@@ -1261,11 +1266,11 @@ a:hover, a:active {
 	margin: 1rem;
 }
 
-.details table {
+.details .media_details {
 	max-width:300px;
 }
 
-.details td {
+.details .media_details td {
 		padding:0 15px;
 		padding:0 1.5rem;
 	}
@@ -1274,13 +1279,13 @@ a:hover, a:active {
 	text-align:justify;
 }
 
-.details td:nth-child(odd) {
+.details .media_details td:nth-child(odd) {
 	width:1%;
 	white-space:nowrap;
 	text-align:right;
 }
 
-.details td:nth-child(even) {
+.details .media_details td:nth-child(even) {
 	text-align:left;
 }
 
