--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1308,3 +1308,12 @@ a:hover, a:active {
 		padding:0 0.5rem 0.5rem;
 	}
 }
+
+/* ----------------------------------------------------------------------------
+	Images / Logos
+-----------------------------------------------------------------------------*/
+
+.streaming-logo {
+	width: 50px;
+	height: 50px;
+}
