--- a/public/css/base.myth.css
+++ b/public/css/base.myth.css
@@ -561,3 +561,11 @@ a:hover, a:active {
 		padding:0 0.5rem 0.5rem;
 	}
 }
+
+/* ----------------------------------------------------------------------------
+	Images / Logos
+-----------------------------------------------------------------------------*/
+.streaming-logo {
+	width: 50px;
+	height: 50px;
+}
