--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1317,3 +1317,8 @@ a:hover, a:active {
 	width: 50px;
 	height: 50px;
 }
+
+.cover_streaming_link .streaming-logo {
+	width: 20px;
+	height: 20px;
+}
