--- a/public/css/base.myth.css
+++ b/public/css/base.myth.css
@@ -569,3 +569,8 @@ a:hover, a:active {
 	width: 50px;
 	height: 50px;
 }
+
+.cover_streaming_link .streaming-logo {
+	width: 20px;
+	height: 20px;
+}
