--- a/public/css/base.myth.css
+++ b/public/css/base.myth.css
@@ -568,6 +568,7 @@ a:hover, a:active {
 .streaming-logo {
 	width: 50px;
 	height: 50px;
+	vertical-align:middle;
 }
 
 .cover_streaming_link .streaming-logo {
