--- a/public/css/base.myth.css
+++ b/public/css/base.myth.css
@@ -4,6 +4,7 @@
 	--link-shadow: 1px 1px 1px #000;
 	--shadow: 1px 2px 1px rgba(0, 0, 0, 0.85);
 	--title-overlay: rgba(0, 0, 0, 0.45);
+	--title-overlay-fallback: #000;
 	--text-color: #ffffff;
 	--normal-padding: 0.25em 0.125em;
 	--link-hover-color: #7d12db;
@@ -315,6 +316,7 @@ a:hover, a:active {
 	.medium_metadata > div,
 	.row {
 		text-shadow: var(--shadow);
+		background: var(--title-overlay-fallback);
 		background: var(--title-overlay);
 		color: var(--text-color);
 		padding: var(--normal-padding);
@@ -398,6 +400,7 @@ a:hover, a:active {
 
 .anime .row, .manga .row {
 	width:100%;
+	background: var(--title-overlay-fallback);
 	background: var(--title-overlay);
 	display: flex;
 	align-content: space-around;
