--- a/public/css/base.myth.css
+++ b/public/css/base.myth.css
@@ -510,9 +510,12 @@ a:hover, a:active {
 -----------------------------------------------------------------------------*/
 .details {
 	margin: 1.5rem auto 0 auto;
-	max-width:93rem;
 	padding:1rem;
 	font-size:inherit;
+}
+
+.details.fixed {
+	max-width:93rem;
 }
 
 .details .cover {
@@ -548,6 +551,14 @@ a:hover, a:active {
 .details .media_details td:nth-child(even) {
 	text-align:left;
 }
+
+/* ----------------------------------------------------------------------------
+	User page styles
+-----------------------------------------------------------------------------*/
+.small_character img {
+	max-width: 300px;
+}
+
 
 /* ----------------------------------------------------------------------------
 	Viewport-based styles
