Details and user page updates, resolves #27

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1025,7 +1025,7 @@ a:hover, a:active {
 	Base list styles
 ------------------------------------------------------------------------------*/
 
-.media {
+.media, .character, .small_character {
 	position:relative;
 	vertical-align:top;
 	display:inline-block;
@@ -1035,7 +1035,9 @@ a:hover, a:active {
 	margin:0.25em 0.125em;
 }
 
-.media > img {
+.media > img,
+.character > img,
+.small_character > img {
 	width: 100%;
 }
 
@@ -1076,7 +1078,9 @@ a:hover, a:active {
 		top: 0;
 	}
 
-.media:hover > .name,
+.small_character:hover > .name,
+		.character:hover > .name,
+		.media:hover > .name,
 		.media:hover > .media_metadata > div,
 		.media:hover > .medium_metadata > div,
 		.media:hover > .table .row
@@ -1094,7 +1098,11 @@ a:hover, a:active {
 			display:block;
 		}
 
-.media > .name a,
+.small_character > .name a,
+		.small_character > .name a small,
+		.character > .name a,
+		.character > .name a small,
+		.media > .name a,
 		.media > .name a small
 		{
 			background:none;
@@ -1263,7 +1271,7 @@ a:hover, a:active {
 .details .cover {
 	display: block;
 	width: 284px;
-	height: 402px;
+	/* height: 402px; */
 }
 
 .details h2 {
@@ -1298,12 +1306,56 @@ a:hover, a:active {
 	text-align:left;
 }
 
+.character,
+.small_character {
+	background: rgba(0, 0, 0, .5);
+	width: 225px;
+	height: 350px;
+	vertical-align: middle;
+	white-space: nowrap;
+}
+
+.small_character a {
+		display:inline-block;
+		width: 100%;
+		height: 100%;
+	}
+
+.small_character .name,
+	.character .name {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		z-index: 10;
+	}
+
+.small_character img,
+	.character img {
+		position: relative;
+		top: 50%;
+		-webkit-transform: translateY(-50%);
+		        transform: translateY(-50%);
+		z-index: 5;
+		width: 100%;
+	}
+
 /* ----------------------------------------------------------------------------
 	User page styles
 -----------------------------------------------------------------------------*/
 
-.small_character img {
-	max-width: 300px;
+.small_character {
+	width: 160px;
+	height: 250px;
+}
+
+.user-page .media-wrap {
+	text-align: left;
+}
+
+.media a {
+	display: inline-block;
+	width: 100%;
+	height: 100%;
 }
 
 /* ----------------------------------------------------------------------------
