--- a/public/css/base.myth.css
+++ b/public/css/base.myth.css
@@ -297,7 +297,7 @@ a:hover, a:active {
 	Base list styles
 ------------------------------------------------------------------------------*/
 
-.media {
+.media, .character, .small_character {
 	position:relative;
 	vertical-align:top;
 	display:inline-block;
@@ -307,7 +307,9 @@ a:hover, a:active {
 	margin: var(--normal-padding);
 }
 
-.media > img {
+.media > img,
+.character > img,
+.small_character > img {
 	width: 100%;
 }
 
@@ -347,7 +349,8 @@ a:hover, a:active {
 		position:absolute;
 		top: 0;
 	}
-
+		.small_character:hover > .name,
+		.character:hover > .name,
 		.media:hover > .name,
 		.media:hover > .media_metadata > div,
 		.media:hover > .medium_metadata > div,
@@ -364,6 +367,10 @@ a:hover, a:active {
 			display:block;
 		}
 
+		.small_character > .name a,
+		.small_character > .name a small,
+		.character > .name a,
+		.character > .name a small,
 		.media > .name a,
 		.media > .name a small
 		{
@@ -521,7 +528,7 @@ a:hover, a:active {
 .details .cover {
 	display: block;
 	width: 284px;
-	height: 402px;
+	/* height: 402px; */
 }
 
 .details h2 {
@@ -552,13 +559,54 @@ a:hover, a:active {
 	text-align:left;
 }
 
+.character,
+.small_character {
+	background: rgba(0,0,0,0.5);
+	width: 225px;
+	height: 350px;
+	vertical-align: middle;
+	white-space: nowrap;
+}
+	.small_character a {
+		display:inline-block;
+		width: 100%;
+		height: 100%;
+	}
+
+	.small_character .name,
+	.character .name {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		z-index: 10;
+	}
+
+	.small_character img,
+	.character img {
+		position: relative;
+		top: 50%;
+		transform: translateY(-50%);
+		z-index: 5;
+		width: 100%;
+	}
+
 /* ----------------------------------------------------------------------------
 	User page styles
 -----------------------------------------------------------------------------*/
-.small_character img {
-	max-width: 300px;
+.small_character {
+	width: 160px;
+	height: 250px;
 }
 
+.user-page .media-wrap {
+	text-align: left;
+}
+
+.media a {
+	display: inline-block;
+	width: 100%;
+	height: 100%;
+}
 
 /* ----------------------------------------------------------------------------
 	Viewport-based styles
