Add staff to character pages

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -753,11 +753,11 @@ a:hover, a:active {
 
 .justify {text-align:justify}
 
-.align_center {text-align:center}
+.align_center {text-align:center !important}
 
-.align_left {text-align:left}
+.align_left {text-align:left !important}
 
-.align_right {text-align:right}
+.align_right {text-align:right !important}
 
 .valign_top {vertical-align:top}
 
@@ -1263,7 +1263,12 @@ a:hover, a:active {
 	font-size:inherit;
 }
 
-.details.fixed {
+.description {
+	max-width:800px;
+	max-width:80rem;
+}
+
+.fixed {
 	max-width:930px;
 	max-width:93rem;
 }
@@ -1338,6 +1343,11 @@ a:hover, a:active {
 		z-index: 5;
 		width: 100%;
 	}
+
+.min-table {
+	min-width: 0;
+	margin-left: 0;
+}
 
 /* ----------------------------------------------------------------------------
 	User page styles
