--- a/public/css/base.css
+++ b/public/css/base.css
@@ -650,3 +650,39 @@ a:hover, a:active {
 	width: 20px;
 	height: 20px;
 }
+
+/* ----------------------------------------------------------------------------
+	Loading overlay
+-----------------------------------------------------------------------------*/
+#loading-shadow {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,0.8);
+	z-index: 500;
+}
+
+	#loading-shadow .loading-wrapper {
+		position: fixed;
+		z-index: 501;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		display:flex;
+		align-items: center;
+		justify-content: center;
+	}
+
+	#loading-shadow .loading-content {
+		position: relative;
+		color: #fff
+	}
+
+	.loading-content .cssload-inner.cssload-one,
+	.loading-content .cssload-inner.cssload-two,
+	.loading-content .cssload-inner.cssload-three {
+		border-color: #fff
+	}
