--- a/public/css/base.css
+++ b/public/css/base.css
@@ -686,3 +686,74 @@ a:hover, a:active {
 	.loading-content .cssload-inner.cssload-three {
 		border-color: #fff
 	}
+
+/* ----------------------------------------------------------------------------
+CSS Tabs
+-----------------------------------------------------------------------------*/
+.tabs {
+	display: flex;
+	flex-wrap: wrap;
+	background: #efefef;
+	box-shadow: 0 48px 80px -32px rgba(0,0,0,0.3);
+	margin-top: 1.5em;
+}
+
+.tabs label {
+	border: 1px solid #e5e5e5;
+	width: 100%;
+	padding: 20px 30px;
+	background: #e5e5e5;
+	cursor: pointer;
+	font-weight: bold;
+	font-size: 18px;
+	color: #7f7f7f;
+	transition: background 0.1s, color 0.1s;
+	/* margin-left: 4em; */
+}
+
+.tabs label:hover {
+	background: #d8d8d8;
+}
+
+.tabs label:active {
+	background: #ccc;
+}
+
+.tabs [type=radio]:focus + label {
+	box-shadow: inset 0px 0px 0px 3px #2aa1c0;
+	z-index: 1;
+}
+
+.tabs [type=radio] {
+	position: absolute;
+	opacity: 0;
+}
+
+.tabs [type=radio]:checked + label {
+	border-bottom: 1px solid #fff;
+	background: #fff;
+	color: #000;
+}
+
+.tabs [type=radio]:checked + label + .content{
+	border: 1px solid #e5e5e5;
+	border-top: 0;
+	display: block;
+	padding: 20px 30px 30px;
+	background: #fff;
+	width: 100%;
+}
+
+.tabs .content {
+	display: none;
+}
+
+@media (min-width: 600px) {
+	.tabs label {
+		width: auto;
+	}
+
+	.tabs .content {
+		order: 99;
+	}
+}
